--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -134,7 +134,6 @@ jobs:
       
       - name: Install Pillow for image resizing
         run: pip install Pillow
-
       - name: Compile Watch Face (with retry)
         id: compile-watchface
         env:
@@ -156,13 +155,7 @@ jobs:
               
               # 使用Python调整图片尺寸
               Write-Output "Resizing preview image from $($Matches[1])x$($Matches[2]) to $expectedWidth x $expectedHeight"
-              python -c "`
-from PIL import Image; `
-img = Image.open(r'$previewPath'); `
-print(f'Original preview size: {img.width}x{img.height}'); `
-img = img.resize(($expectedWidth, $expectedHeight)); `
-img.save(r'$previewPath'); `
-print(f'Resized preview to: {$expectedWidth}x{$expectedHeight}')"
+              python -c "from PIL import Image; img = Image.open(r'$previewPath'); print(f'Original preview size: {img.width}x{img.height}'); img = img.resize(($expectedWidth, $expectedHeight)); img.save(r'$previewPath'); print(f'Resized preview to: {$expectedWidth}x{$expectedHeight}')"
               
               return $true
             }
@@ -179,13 +172,7 @@ print(f'Resized preview to: {$expectedWidth}x{$expectedHeight}')"
               
               # 调整背景图尺寸
               Write-Output "Resizing background image from $($Matches[1])x$($Matches[2]) to $expectedWidth x $expectedHeight"
-              python -c "`
-from PIL import Image; `
-img = Image.open(r'$backgroundPath'); `
-print(f'Original background size: {img.width}x{img.height}'); `
-img = img.resize(($expectedWidth, $expectedHeight)); `
-img.save(r'$backgroundPath'); `
-print(f'Resized background to: {$expectedWidth}x{$expectedHeight}')"
+              python -c "from PIL import Image; img = Image.open(r'$backgroundPath'); print(f'Original background size: {img.width}x{img.height}'); img = img.resize(($expectedWidth, $expectedHeight)); img.save(r'$backgroundPath'); print(f'Resized background to: {$expectedWidth}x{$expectedHeight}')"
               
               return $true
             }
@@ -237,6 +224,7 @@ print(f'Resized background to: {$expectedWidth}x{$expectedHeight}')"
           # 最终失败处理
           Write-Output "Compilation failed after retry attempts"
           exit 1
+       
             
       # 7. Verify output
       - name: Verify Output File
