--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,20 +107,13 @@ jobs:
           $imagesDir = Join-Path $fprjDir "images"
           New-Item -ItemType Directory -Path $imagesDir -Force
           
-          # 保存背景图 - 使用更可靠的方法
+          # 保存背景图
           $picPath = Join-Path $imagesDir "pic.png"
+          [IO.File]::WriteAllBytes($picPath, $bytes)
           
-          # 确保文件写入完成
-          $stream = [System.IO.File]::Create($picPath)
-          $stream.Write($bytes, 0, $bytes.Length)
-          $stream.Flush()
-          $stream.Close()
-          
-          # 保存预览图 - 使用复制而不是引用
+          # 保存预览图
           $prePath = Join-Path $imagesDir "pre.png"
-          
-          # 使用System.IO.File.Copy确保完整复制
-          [System.IO.File]::Copy($picPath, $prePath, $true)
+          Copy-Item $picPath $prePath -Force
           
           Write-Output "Saved background image to: $picPath"
           Write-Output "Saved preview image to: $prePath"
@@ -161,46 +154,9 @@ jobs:
               # 获取预览图路径
               $previewPath = "${{ steps.prepare-project.outputs.preview_path }}"
               
-              # 使用Python调整图片尺寸 - 更健壮的方法
+              # 使用Python调整图片尺寸
               Write-Output "Resizing preview image from $($Matches[1])x$($Matches[2]) to $expectedWidth x $expectedHeight"
-              
-              # 创建临时Python脚本
-              $pythonScript = @"
-import os
-import time
-from PIL import Image
-
-def resize_image(path, width, height):
-    # 检查文件是否存在
-    if not os.path.exists(path):
-        print(f"Error: File not found - {path}")
-        return False
-    
-    # 尝试多次打开文件（解决文件锁定问题）
-    for attempt in range(5):
-        try:
-            img = Image.open(path)
-            print(f"Original preview size: {img.width}x{img.height}")
-            img = img.resize((width, height))
-            img.save(path)
-            print(f"Resized preview to: {width}x{height}")
-            return True
-        except Exception as e:
-            print(f"Attempt {attempt+1} failed: {str(e)}")
-            time.sleep(0.5)  # 等待0.5秒后重试
-    
-    print("All attempts failed to resize image")
-    return False
-
-resize_image(r'$previewPath', $expectedWidth, $expectedHeight)
-"@
-              
-              # 保存Python脚本
-              $scriptPath = Join-Path $env:TEMP "resize_image.py"
-              $pythonScript | Out-File $scriptPath -Encoding UTF8
-              
-              # 执行Python脚本
-              python $scriptPath
+              python -c "from PIL import Image; img = Image.open(r'$previewPath'); img = img.resize(($expectedWidth, $expectedHeight)); img.save(r'$previewPath')"
               
               return $true
             }
@@ -215,44 +171,9 @@ resize_image(r'$previewPath', $expectedWidth, $expectedHeight)
               $fprjPath = "${{ steps.prepare-project.outputs.fprj_path }}"
               $backgroundPath = Join-Path (Split-Path $fprjPath -Parent) "images\pic.png"
               
-              # 调整背景图尺寸 - 使用相同的方法
+              # 调整背景图尺寸
               Write-Output "Resizing background image from $($Matches[1])x$($Matches[2]) to $expectedWidth x $expectedHeight"
-              
-              # 创建临时Python脚本
-              $pythonScript = @"
-import os
-import time
-from PIL import Image
-
-def resize_image(path, width, height):
-    if not os.path.exists(path):
-        print(f"Error: File not found - {path}")
-        return False
-    
-    for attempt in range(5):
-        try:
-            img = Image.open(path)
-            print(f"Original background size: {img.width}x{img.height}")
-            img = img.resize((width, height))
-            img.save(path)
-            print(f"Resized background to: {width}x{height}")
-            return True
-        except Exception as e:
-            print(f"Attempt {attempt+1} failed: {str(e)}")
-            time.sleep(0.5)
-    
-    print("All attempts failed to resize image")
-    return False
-
-resize_image(r'$backgroundPath', $expectedWidth, $expectedHeight)
-"@
-              
-              # 保存Python脚本
-              $scriptPath = Join-Path $env:TEMP "resize_background.py"
-              $pythonScript | Out-File $scriptPath -Encoding UTF8
-              
-              # 执行Python脚本
-              python $scriptPath
+              python -c "from PIL import Image; img = Image.open(r'$backgroundPath'); img = img.resize(($expectedWidth, $expectedHeight)); img.save(r'$backgroundPath')"
               
               return $true
             }
