--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,13 +107,20 @@ jobs:
           $imagesDir = Join-Path $fprjDir "images"
           New-Item -ItemType Directory -Path $imagesDir -Force
           
-          # 保存背景图
+          # 保存背景图 - 使用更可靠的方法
           $picPath = Join-Path $imagesDir "pic.png"
-          [IO.File]::WriteAllBytes($picPath, $bytes)
           
-          # 保存预览图
+          # 确保文件写入完成
+          $stream = [System.IO.File]::Create($picPath)
+          $stream.Write($bytes, 0, $bytes.Length)
+          $stream.Flush()
+          $stream.Close()
+          
+          # 保存预览图 - 使用复制而不是引用
           $prePath = Join-Path $imagesDir "pre.png"
-          Copy-Item $picPath $prePath -Force
+          
+          # 使用System.IO.File.Copy确保完整复制
+          [System.IO.File]::Copy($picPath, $prePath, $true)
           
           Write-Output "Saved background image to: $picPath"
           Write-Output "Saved preview image to: $prePath"
@@ -154,38 +161,46 @@ jobs:
               # 获取预览图路径
               $previewPath = "${{ steps.prepare-project.outputs.preview_path }}"
               
-              # 使用Python调整图片尺寸
+              # 使用Python调整图片尺寸 - 更健壮的方法
               Write-Output "Resizing preview image from $($Matches[1])x$($Matches[2]) to $expectedWidth x $expectedHeight"
-              python -c "from PIL import Image; img = Image.open(r'$previewPath'); img = img.resize(($expectedWidth, $expectedHeight)); img.save(r'$previewPath')"
               
-              return $true
-            }
-            
-            # 2. 处理背景图尺寸错误
-            $backgroundPattern = 'Background has wrong size: (\d+)x(\d+), expected: (\d+)x(\d+)'
-            if ($errorOutput -match $backgroundPattern) {
-              $expectedWidth = $Matches[3]
-              $expectedHeight = $Matches[4]
+              # 创建临时Python脚本
+              $pythonScript = @"
+import os
+import time
+from PIL import Image
+
+def resize_image(path, width, height):
+    # 检查文件是否存在
+    if not os.path.exists(path):
+        print(f"Error: File not found - {path}")
+        return False
+    
+    # 尝试多次打开文件（解决文件锁定问题）
+    for attempt in range(5):
+        try:
+            img = Image.open(path)
+            print(f"Original preview size: {img.width}x{img.height}")
+            img = img.resize((width, height))
+            img.save(path)
+            print(f"Resized preview to: {width}x{height}")
+            return True
+        except Exception as e:
+            print(f"Attempt {attempt+1} failed: {str(e)}")
+            time.sleep(0.5)  # 等待0.5秒后重试
+    
+    print("All attempts failed to resize image")
+    return False
+
+resize_image(r'$previewPath', $expectedWidth, $expectedHeight)
+"@
               
-              # 获取背景图路径
-              $fprjPath = "${{ steps.prepare-project.outputs.fprj_path }}"
-              $backgroundPath = Join-Path (Split-Path $fprjPath -Parent) "images\pic.png"
+              # 保存Python脚本
+              $scriptPath = Join-Path $env:TEMP "resize_image.py"
+              $pythonScript | Out-File $scriptPath -Encoding UTF8
               
-              # 调整背景图尺寸
-              Write-Output "Resizing background image from $($Matches[1])x$($Matches[2]) to $expectedWidth x $expectedHeight"
-              python -c "from PIL import Image; img = Image.open(r'$backgroundPath'); img = img.resize(($expectedWidth, $expectedHeight)); img.save(r'$backgroundPath')"
-              
-              return $true
-            }
-            
-            # 3. 处理资源缺失错误
-            $missingPattern = "unable to open image '(.+)'"
-            if ($errorOutput -match $missingPattern) {
-              $missingFile = $Matches[1]
-              Write-Output "Creating placeholder for missing file: $missingFile"
-              
-              # 创建空文件占位符
-              New-Item -Path $missingFile -ItemType File -Force | Out-Null
+              # 执行Python脚本
+              python $scriptPath
               
               return $true
             }
