--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -111,10 +111,7 @@ jobs:
           $picPath = Join-Path $imagesDir "pic.png"
           
           # 确保文件写入完成
-          $stream = [System.IO.File]::Create($picPath)
-          $stream.Write($bytes, 0, $bytes.Length)
-          $stream.Flush()
-          $stream.Close()
+          [System.IO.File]::WriteAllBytes($picPath, $bytes)
           
           # 保存预览图 - 使用复制而不是引用
           $prePath = Join-Path $imagesDir "pre.png"
@@ -159,9 +156,61 @@ jobs:
               # 获取预览图路径
               $previewPath = "${{ steps.prepare-project.outputs.preview_path }}"
               
-              # 使用Python调整图片尺寸
+              # 使用Python调整图片尺寸 - 更健壮的方法
               Write-Output "Resizing preview image from $($Matches[1])x$($Matches[2]) to $expectedWidth x $expectedHeight"
-              python -c "from PIL import Image; img = Image.open(r'$previewPath'); img = img.resize(($expectedWidth, $expectedHeight)); img.save(r'$previewPath')"
+              
+              # 创建临时Python脚本
+              $pythonScript = @"
+import os
+import time
+import io
+from PIL import Image
+
+def resize_image(path, width, height):
+    # 检查文件是否存在
+    if not os.path.exists(path):
+        print(f"Error: File not found - {path}")
+        return False
+    
+    # 尝试多次打开文件（解决文件锁定问题）
+    for attempt in range(5):
+        try:
+            # 使用二进制模式读取文件确保完整加载
+            with open(path, 'rb') as f:
+                img_data = f.read()
+            
+            # 从内存中创建图片对象
+            img = Image.open(io.BytesIO(img_data))
+            print(f"Original preview size: {img.width}x{img.height}")
+            
+            # 调整尺寸
+            img = img.resize((width, height))
+            
+            # 保存到临时文件
+            temp_path = path + ".tmp"
+            img.save(temp_path)
+            
+            # 替换原始文件
+            os.replace(temp_path, path)
+            
+            print(f"Resized preview to: {width}x{height}")
+            return True
+        except Exception as e:
+            print(f"Attempt {attempt+1} failed: {str(e)}")
+            time.sleep(0.5)  # 等待0.5秒后重试
+    
+    print("All attempts failed to resize image")
+    return False
+
+resize_image(r'$previewPath', $expectedWidth, $expectedHeight)
+"@
+              
+              # 保存Python脚本
+              $scriptPath = Join-Path $env:TEMP "resize_image.py"
+              $pythonScript | Out-File $scriptPath -Encoding UTF8
+              
+              # 执行Python脚本
+              python $scriptPath
               
               return $true
             }
