--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Watch Face Generator with Auto-Cleanup and Preview Fix
+name: Watch Face Generator with Auto-Cleanup
 
 on:
   repository_dispatch:
@@ -14,6 +14,7 @@ jobs:
     runs-on: windows-latest
     permissions:
       contents: write
+    timeout-minutes: 15
       
     steps:
       # 1. Checkout code
@@ -26,7 +27,6 @@ jobs:
           wmic computersystem set AutomaticManagedPagefile=False
           wmic pagefileset create name="C:\pagefile.sys"
           wmic pagefileset where name="C:\pagefile.sys" set InitialSize=16384,MaximumSize=16384
-          wmic pagefileset list brief
           echo "Virtual memory increased to 16GB"
 
       # 3. Process input data
@@ -51,7 +51,6 @@ jobs:
         run: |
           # 设置项目目录路径
           $projectDir = "project"
-          $fprjFile = "fprj.fprj"
           
           # 获取模型路径
           $modelPath = Get-Content "$env:RUNNER_TEMP\model_path.txt"
@@ -80,10 +79,6 @@ jobs:
           $fprjFiles = @(Get-ChildItem -Path $projectDir -Filter "*.fprj" -Recurse)
           Write-Output "Found $($fprjFiles.Count) FPRJ files in project directory"
           
-          # 输出目录树帮助调试
-          Write-Output "Project directory structure:"
-          tree $projectDir /F | Out-String -Width 1024
-          
           if ($fprjFiles.Count -eq 0) {
               Write-Error "No FPRJ file found in project directory."
               exit 1
@@ -91,7 +86,7 @@ jobs:
           
           # 重命名第一个找到的FPRJ文件
           $fprjOriginal = $fprjFiles[0]
-          $newName = $fprjFile
+          $newName = "fprj.fprj"
           $newPath = Join-Path $fprjOriginal.Directory $newName
           Rename-Item -Path $fprjOriginal.FullName -NewName $newName -Force
           Write-Output "Renamed project file: $($fprjOriginal.FullName) -> $newPath"
@@ -107,28 +102,13 @@ jobs:
           $imagesDir = Join-Path $fprjDir "images"
           New-Item -ItemType Directory -Path $imagesDir -Force
           
-          # 保存背景图（使用可靠写入方式）
+          # 保存背景图
           $picPath = Join-Path $imagesDir "pic.png"
           [IO.File]::WriteAllBytes($picPath, $bytes)
           
-          # 添加完整性检查
-          Start-Sleep -Seconds 1
-          if ((Get-Item $picPath).Length -ne $bytes.Length) {
-              Write-Error "背景图片写入不完整，$($(Get-Item $picPath).Length) 字节 vs 预期 $($bytes.Length) 字节"
-              exit 1
-          }
-          
-          # 保存预览图（使用复制文件保证完整写入）
+          # 保存预览图
           $prePath = Join-Path $imagesDir "pre.png"
-          Start-Sleep -Milliseconds 500  # 确保文件系统刷新
-          Copy-Item -Path $picPath -Destination $prePath -Force
-          
-          # 检查预览图完整性
-          Start-Sleep -Seconds 1
-          if ((Get-Item $prePath).Length -ne (Get-Item $picPath).Length) {
-              Write-Error "预览图片复制失败，$($(Get-Item $prePath).Length) 字节 vs 原始 $($(Get-Item $picPath).Length) 字节"
-              exit 1
-          }
+          [IO.File]::WriteAllBytes($prePath, $bytes)
           
           Write-Output "Saved background image to: $picPath"
           Write-Output "Saved preview image to: $prePath"
@@ -142,183 +122,22 @@ jobs:
           echo "preview_path=$prePath" >> $env:GITHUB_OUTPUT
       
       # 5. Set up Python with Pillow
-      - name: Set up Python 3.10 and Pillow
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
       
-      - name: Install Pillow for image resizing
+      - name: Install dependencies
         run: pip install Pillow
 
-      - name: Compile Watch Face (with retry)
+      # 6. Compile watch face
+      - name: Compile Watch Face
         id: compile-watchface
         env:
           PROJECT_PATH: "${{ steps.prepare-project.outputs.fprj_path }}"
           OUTPUT_DIR: "${{ github.workspace }}/output"
-        run: |
-          # 带重试机制的图片调整函数
-          function Resize-ImageWithRetry {
-            param($path, $expectedWidth, $expectedHeight)
-            
-            $retryCount = 0
-            $maxRetries = 3
-            $success = $false
-            
-            while (-not $success -and $retryCount -lt $maxRetries) {
-                $retryCount++
-                Write-Output "Attempt #$retryCount to resize $path to ${expectedWidth}x${expectedHeight}"
-                
-                try {
-                    $output = python -c "
-                      import sys
-                      from PIL import Image
-                      import traceback
-                      import os
-                      import time
-                      
-                      # 检查文件是否被占用
-                      def is_file_locked(file_path):
-                          try:
-                              with open(file_path, 'a') as f:
-                                  pass
-                              return False
-                          except (IOError, OSError):
-                              return True
-                      
-                      file_path = r'$path'
-                      if is_file_locked(file_path):
-                          print(f'文件被占用，等待重试...')
-                          time.sleep($retryCount * 0.5)  # 指数退避等待
-                          
-                      try:
-                          img = Image.open(file_path)
-                          
-                          # 验证文件是否完整
-                          try:
-                              img.load()
-                          except OSError as e:
-                              print(f'图像加载失败: {e}')
-                              if 'truncated' in str(e):
-                                  print('文件可能被截断 - 需要重新写入')
-                                  with open(file_path, 'rb') as f:
-                                      content = f.read()
-                                      if len(content) < os.path.getsize(file_path):
-                                          raise Exception('文件内容不完整')
-                                  raise
-                              else:
-                                  raise
-                          
-                          # 调整图像尺寸
-                          new_size = ($expectedWidth, $expectedHeight)
-                          img = img.resize(new_size, Image.LANCZOS)
-                          
-                          # 临时文件写入
-                          temp_path = file_path + '.tmp'
-                          img.save(temp_path, 'PNG')
-                          
-                          # 原子替换原文件
-                          if os.path.exists(file_path):
-                              os.unlink(file_path)
-                          os.rename(temp_path, file_path)
-                          
-                          print('图像调整成功')
-                          sys.exit(0)
-                          
-                      except Exception as e:
-                          traceback.print_exc()
-                          print(f'尝试 #{retryCount} 失败: {e}')
-                          time.sleep($retryCount * 0.5)
-                          sys.exit(1)
-                          "
-                    if ($LASTEXITCODE -eq 0) {
-                        $success = $true
-                        Write-Output "图像调整成功"
-                    } else {
-                        Write-Output "图片调整失败: $output"
-                        Start-Sleep -Seconds ($retryCount * 1)
-                    }
-                } catch {
-                    Write-Output "图片处理异常: $_"
-                    Start-Sleep -Seconds ($retryCount * 1)
-                }
-            }
-            
-            return $success
-          }
-          
-          # 错误处理函数
-          function Handle-Errors {
-            param($errorOutput)
-            
-            # 1. 处理预览尺寸错误
-            $previewPattern = 'Preview has wrong size: (\d+)x(\d+), expected: (\d+)x(\d+)'
-            if ($errorOutput -match $previewPattern) {
-              $expectedWidth = [int]$Matches[3]
-              $expectedHeight = [int]$Matches[4]
-              
-              # 获取预览图路径
-              $previewPath = "${{ steps.prepare-project.outputs.preview_path }}"
-              
-              # 使用带重试的图片调整
-              $success = Resize-ImageWithRetry -path $previewPath -expectedWidth $expectedWidth -expectedHeight $expectedHeight
-              
-              if (-not $success) {
-                  Write-Output "无法修复预览图片，即使经过多次重试"
-                  return $false
-              }
-              
-              # 验证调整后的图片
-              Start-Sleep -Seconds 1
-              try {
-                  $imgInfo = python -c "from PIL import Image; import os; img = Image.open(r'$previewPath'); print(f'{img.width}x{img.height}');"
-                  Write-Output "调整后图片尺寸: $imgInfo"
-                  
-                  if ($imgInfo -eq "${expectedWidth}x${expectedHeight}") {
-                      Write-Output "预览图片验证成功"
-                      return $true
-                  }
-              } catch {
-                  Write-Output "图片验证失败: $_"
-                  return $false
-              }
-            }
-            
-            return $false
-          }
-          
-          # 首次尝试编译
-          Write-Output "First compilation attempt..."
-          $output = python compile_watchface.py 2>&1 | Out-String
-          $exitCode = $LASTEXITCODE
-          
-          if ($exitCode -eq 0) {
-            Write-Output "Compilation succeeded on first attempt"
-            exit 0
-          }
-          
-          Write-Output "Compilation output:"
-          Write-Output $output
-          
-          # 尝试处理错误
-          if (Handle-Errors $output) {
-            # 重新编译
-            Write-Output "Retrying compilation after fixing errors..."
-            $output = python compile_watchface.py 2>&1 | Out-String
-            $exitCode = $LASTEXITCODE
-            
-            if ($exitCode -eq 0) {
-              Write-Output "Compilation succeeded after fixes"
-              exit 0
-            } else {
-              Write-Output "Compilation failed after fixes. Output:"
-              Write-Output $output
-            }
-          }
-          
-          # 最终失败处理
-          Write-Output "Compilation failed after retry attempts"
-          exit 1
-            
+        run: python compile_watchface.py
+
       # 7. Verify output
       - name: Verify Output File
         id: verify-output
@@ -362,7 +181,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      # 1. Wait 10 minutes (using native sleep)
+      # 1. Wait 10 minutes
       - name: Wait for 10 minutes
         run: sleep 600
       
